# Plugin

./: .gitmodules  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md
src/: CMakeLists.txt  dllmain.cc
src/genshicraft/: CMakeLists.txt  dllmain.cc
